--- a/package.json
+++ b/package.json
@@ -10,14 +10,33 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.0",
+    "react-native-device-info": "^10.12.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "^4.8.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.11.4",
+    "react-native-radio-buttons-group": "^3.0.5",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-webview": "^13.6.3",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-form": "^8.3.10",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -32,6 +51,7 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
