--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.0",
     "react-native-device-info": "^10.12.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.8.4",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.4",
     "react-native-radio-buttons-group": "^3.0.5",
@@ -31,6 +35,7 @@
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
+    "react-native-vision-camera": "^3.6.17",
     "react-native-webview": "^13.6.3",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
